trying to fix text overflow

--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -105,20 +105,20 @@
 
 @media only screen and (max-width: 480px) {
       .navbar-brand { 
-            font-size: 2.5em;
-          -webkit-transform: translateY(0px);
-          -moz-transform:  translateY(0px);
-          -ms-transform:  translateY(0px);
-          -o-transform: translateY(0px);
-            transform: translateY(0px);
+            font-size: 2em;
+          -webkit-transform: translateY(2px);
+          -moz-transform:  translateY(2px);
+          -ms-transform:  translateY(2px);
+          -o-transform: translateY(2px);
+            transform: translateY(2px);
       }
       .navbar-fixed-top.scrolled .navbar-brand { 
-        font-size: 2.5em;
-        -webkit-transform: translateY(0px);
-        -moz-transform:  translateY(0px);
-        -ms-transform:  translateY(0px);
-        -o-transform: translateY(0px);
-        transform: translateY(0px);
+        font-size: 2em;
+        -webkit-transform: translateY(2px);
+        -moz-transform:  translateY(2px);
+        -ms-transform:  translateY(2px);
+        -o-transform: translateY(2px);
+        transform: translateY(2px);
     }
 }
 
